# support-ticket-triage-agent

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: workflow_graph.html
data/: customers.csv  error_logs.csv
src/triage/: data_store.py  graph.py  llm.py  main.py  nodes.py  state.py  tools.py
